<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BookManager</string>
    <string name="welcome">Welcome to</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password" tools:keep="@string/error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale" tools:keep="@string/permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello">FPT Polytechnic</string>
    <string name="prompt_user">User</string>
    <string name="rememberPass">Remember Password</string>
    <string name="notify_wrong_username_or_password">Tài khoản hoặc mật khẩu không chính xác!!!</string>
    <string name="title_activity_menu">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" tools:keep="@string/nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" tools:keep="@string/nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="imguser">User</string>
    <string name="imgbook">Book</string>
    <string name="imgsachbanchay">Sách bán chạy</string>
    <string name="imgtheloai">Type</string>
    <string name="imgbill">Bill</string>
    <string name="imgthongke">Thống kê</string>
    <string name="action_about">About</string>
    <string name="title_pass" tools:keep="@string/title_pass">Đổi mật khẩu</string>
    <string name="edit">Cập nhật</string>
    <string name="huy">Hủy</string>
    <string name="name_user">Họ và tên</string>
    <string name="dia_chi">Lai Châu</string>
    <string name="error_UserName">Tên đăng nhập không được để trống!!!</string>
    <string name="error_Ki_Tu_Dac_Bite" tools:keep="@string/error_Ki_Tu_Dac_Bite">Tên đăng nhập và mật khẩu không được chứa kí tự đặc biệt!!!</string>
    <string name="error_PassWord">Mật khẩu không được để trống!!!</string>
    <string name="error_password_ngan">Mật khẩu phải lớn hơn 6 kí tự!!!</string>
    <string name="prompt_password_again">Nhập lại password</string>
    <string name="phone">Số điện thoại</string>
    <string name="add">Thêm</string>
    <string name="erro_phone" tools:keep="@string/erro_phone">Số điện thoại không được để trống!!!</string>
    <string name="error_hoTen">Họ và tên không được để trống!!!</string>
    <string name="error_phone">Số điện thoại không được để trống!!!</string>
    <string name="error_UserName_ngan">Username phải lớn hơn 5 kí tự!!!</string>
    <string name="action_them">Thêm</string>
    <string name="action_doi_mat_khau">Đổi mật khẩu</string>
    <string name="action_dang_xuat">Đăng xuất</string>
    <string name="maLoai">Mã thể loại</string>
    <string name="tenTheLoai">Tên thể loại</string>
    <string name="viTri">Vị trí</string>
    <string name="moTa">Mô tả</string>
    <string name="type_cntt">Công nghệ thông tin</string>
    <string name="maSach">Mã sách</string>
    <string name="tenSach">Tên sách</string>
    <string name="tacGia">Tác giả</string>
    <string name="NXB">NXB</string>
    <string name="giaBia">Giá Bìa</string>
    <string name="soLuong">Số lượng</string>
    <string name="notify_add_successful">Thêm user thành công!!!</string>
    <string name="Save" tools:keep="@string/Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="notify_save_successful">Update Successful !!!</string>
    <string name="passagain">Password không khớp!!!</string>
    <string name="delete_not_successful">Xóa không thành công!!!</string>
    <string name="delete_successful">Xóa thành công!!!</string>
    <string name="update">Update</string>
    <string name="update_not_successful">Cập nhật không thành công!!!</string>
    <string name="data_maLoai_null">Mã loại không được để trống!!!</string>
    <string name="data_tenLoai_null">Tên loại không được để trống!!!</string>
    <string name="data_moTa_null" tools:keep="@string/data_moTa_null">Mô tả không được để trống!!!</string>
    <string name="maLoai_dai">Mã loại không được lớn hơn 5 kí tự!!!</string>
    <string name="idBill" tools:keep="@string/idBill">ID</string>
    <string name="date">Date</string>
    <string name="error_bill_id_max_length" tools:keep="@string/error_bill_id_max_length">ID không được quá 7 kí tự!!!</string>
    <string name="error_save_data_failed" tools:keep="@string/error_save_data_failed">Lưu dữ liệu thất bại!!!</string>
    <string name="data_null">Dữ liệu không được để trống!!!</string>
    <string name="maHoaDon">Mã hóa đơn</string>
    <string name="soLuongmua">Số lượng mua</string>
    <string name="maSach_ngan">Mã sách không được lớn hơn 5 kí tự!!!</string>
    <string name="idBill_dai">Mã hóa đơn không được quá 7 kí tự!!!</string>
    <string name="thanhToan">Thanh Toán</string>
    <string name="login">Login in with Fpoly</string>
    <string name="book">Book</string>
    <string name="thong_ke">Thống kê</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="exit">Thoát</string>
    <string name="matkhaucu">Mật khẩu cũ</string>
    <string name="matkhaumoi">Mật khẩu mới</string>
    <string name="xacnhanmk">Xác nhận mật khẩu mới</string>
    <string name="thanhtien">Thành tiền</string>
    <string name="day">Hôm nay:</string>
    <string name="month">Tháng này:</string>
    <string name="year">Năm này:</string>
</resources>
