<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVang"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtMaSach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maSach" />

        <Spinner
            android:id="@+id/spnType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35dp" />

        <EditText
            android:id="@+id/edtTenSach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tenSach" />

        <EditText
            android:id="@+id/edtTacGia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tacGia" />

        <EditText
            android:id="@+id/edtNXB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NXB" />

        <EditText
            android:id="@+id/edtGiaBia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/giaBia" />

        <EditText
            android:id="@+id/edtSoLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/soLuong" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddBook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/huy" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>