<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVang"
    android:orientation="vertical"
    tools:context=".HoaDonChiTietActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="5">

        <EditText
            android:id="@+id/edtmaBillDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maHoaDon" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/maSach" />

    <Spinner
        android:id="@+id/spnMaSach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:id="@+id/edtsoLuongmua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/soLuongmua" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveBillDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thanhToan" />

        <Button
            android:onClick="Huy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/huy"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanhtien"
        android:textSize="20sp"
        android:id="@+id/txtThanhTien"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBillDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>