<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVang">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="7"
        app:counterEnabled="true">
        <EditText
            android:id="@+id/edtIDbill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idBill"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
    <Button
        android:id="@+id/btnSaveBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Save"/>
</LinearLayout>